--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -60,5 +60,5 @@ strong {
 }
 
 @mixin projectGapReducer {
-    margin-bottom: -40px;
+    margin-bottom: -32px;
 }
